# Process-testing

./: .env.example  .gitignore  README.md  config.py  generate_pptx.py  inspect_board.py  launch_process_testing.bat  package_process_testing.py  process_testing_launcher.py  pyproject.toml  requirements.txt  server.py
.claude/: CLAUDE.md
.claude/commands/: generate-pptx.md  run-demo.md  run-eval.md
dashboard/: app.js  architecture.html  index.html  styles.css
demo/: __init__.py  run_demo.py  run_mvp.py  sync_mock_project.py
design_library/: README.md
design_library/architectural-viz/: DESIGN.md
design_library/brand-experience/: DESIGN.md
design_library/tech-showroom/: DESIGN.md
design_workflow/: __init__.py  llm_client.py  llm_helpers.py
docs/: PROJECT_SUMMARY.md  intake_output_standard_protocol.md  knowledge_base_schema.md  launcher_quickstart.md  sample_test_inputs_v1.md  v1_system_design.md  workflow_diagram.md
evaluation/: run_eval.py  sample_inputs_v1.json
tests/: test_adapters.py  test_api.py  test_dashboard_assets.py  test_design_library_assets.py  test_engine.py  test_eval_runner.py  test_full_demo.py  test_glm_client.py  test_http_transports.py  test_image_gen.py  test_intake_output_standard.py  test_launcher_bundle.py  test_llm.py  test_mock_project_sync.py  test_mock_tools.py  test_mvp_flow.py  test_observability.py  test_persistent_storage.py  test_pool.py  test_pptx_generation.py  test_runtime_service.py  test_skill_registry.py  test_style_and_prompt_quality.py  test_task_board.py  test_tools.py  test_types.py
wiki/: AGENTS.md  index.md
(+88 files in other folders)
